// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vscode > vscode 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/build/*/**/*.js",
      "**/dist/**/*.js",
      "**/extensions/**/*.d.ts",
      "**/extensions/**/build/**",
      "**/extensions/**/colorize-fixtures/**",
      "**/extensions/css-language-features/server/test/pathCompletionFixtures/**",
      "**/extensions/html-language-features/server/lib/jquery.d.ts",
      "**/extensions/html-language-features/server/src/test/pathCompletionFixtures/**",
      "**/extensions/ipynb/notebook-out/**",
      "**/extensions/markdown-language-features/media/**",
      "**/extensions/markdown-language-features/notebook-out/**",
      "**/extensions/markdown-math/notebook-out/**",
      "**/extensions/notebook-renderers/renderer-out/index.js",
      "**/extensions/simple-browser/media/index.js",
      "**/extensions/terminal-suggest/src/completions/upstream/**",
      "**/extensions/terminal-suggest/third_party/**",
      "**/extensions/typescript-language-features/test-workspace/**",
      "**/extensions/typescript-language-features/extension.webpack.config.js",
      "**/extensions/typescript-language-features/extension-browser.webpack.config.js",
      "**/extensions/typescript-language-features/package-manager/node-maintainer/**",
      "**/extensions/vscode-api-tests/testWorkspace/**",
      "**/extensions/vscode-api-tests/testWorkspace2/**",
      "**/fixtures/**",
      "**/node_modules/**",
      "**/out-*/**/*.js",
      "**/out-editor-*/**",
      "**/out/**/*.js",
      "**/src/**/dompurify.js",
      "**/src/**/marked.js",
      "**/src/**/semver.js",
      "**/src/typings/**/*.d.ts",
      "**/src/vs/*/**/*.d.ts",
      "**/src/vs/base/test/common/filters.perf.data.js",
      "**/src/vs/loader.js",
      "**/test/unit/assert.js",
      "**/test/automation/out/**",
      "**/typings/**",
      "!.vscode",
    ],
    "plugins": [],
    "rules": {
      "curly": "warn",
      "eqeqeq": "warn",
      "no-async-promise-executor": "warn",
      "no-caller": "warn",
      "no-case-declarations": "warn",
      "no-debugger": "warn",
      "no-duplicate-case": "warn",
      "no-duplicate-imports": "warn",
      "no-eval": "warn",
      "no-new-wrappers": "warn",
      "no-redeclare": "off",
      "no-restricted-globals": [
        "warn",
        "name",
        "length",
        "event",
        "closed",
        "external",
        "status",
        "origin",
        "orientation",
        "context",
      ],
      "no-sparse-arrays": "warn",
      "no-throw-literal": "warn",
      "no-unsafe-finally": "warn",
      "no-unused-labels": "warn",
      "no-var": "warn",
    },
  },
  "warnings": [
    "ignore allow list is currently not supported: !.vscode",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule: prefer-const",
    "unsupported rule: no-buffer-constructor",
    "unsupported rule: no-extra-semi",
    "unsupported rule: no-misleading-character-class",
    "unsupported rule: header/header",
    "unsupported rule: @stylistic/ts/semi",
    "unsupported rule: @stylistic/ts/member-delimiter-style",
    "unsupported rule: jsdoc/no-types",
    "unsupported rule: @typescript-eslint/naming-convention",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: jsdoc/no-multi-asterisks",
    "unsupported rule: jsdoc/require-jsdoc",
    "unsupported rule: jsdoc/check-param-names",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: @typescript-eslint/naming-convention",
    "unsupported rule: comma-dangle",
    "unsupported rule: @typescript-eslint/naming-convention",
    "unsupported rule: @typescript-eslint/prefer-optional-chain",
    "unsupported rule: @typescript-eslint/prefer-readonly",
  ],
}
`;

exports[`vscode upgrade > vscode--upgrade 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "ignorePatterns": [
      "**/build/*/**/*.js",
      "**/dist/**/*.js",
      "**/extensions/**/*.d.ts",
      "**/extensions/**/build/**",
      "**/extensions/**/colorize-fixtures/**",
      "**/extensions/css-language-features/server/test/pathCompletionFixtures/**",
      "**/extensions/html-language-features/server/lib/jquery.d.ts",
      "**/extensions/html-language-features/server/src/test/pathCompletionFixtures/**",
      "**/extensions/ipynb/notebook-out/**",
      "**/extensions/markdown-language-features/media/**",
      "**/extensions/markdown-language-features/notebook-out/**",
      "**/extensions/markdown-math/notebook-out/**",
      "**/extensions/notebook-renderers/renderer-out/index.js",
      "**/extensions/simple-browser/media/index.js",
      "**/extensions/terminal-suggest/src/completions/upstream/**",
      "**/extensions/terminal-suggest/third_party/**",
      "**/extensions/typescript-language-features/test-workspace/**",
      "**/extensions/typescript-language-features/extension.webpack.config.js",
      "**/extensions/typescript-language-features/extension-browser.webpack.config.js",
      "**/extensions/typescript-language-features/package-manager/node-maintainer/**",
      "**/extensions/vscode-api-tests/testWorkspace/**",
      "**/extensions/vscode-api-tests/testWorkspace2/**",
      "**/fixtures/**",
      "**/node_modules/**",
      "**/out-*/**/*.js",
      "**/out-editor-*/**",
      "**/out/**/*.js",
      "**/src/**/dompurify.js",
      "**/src/**/marked.js",
      "**/src/**/semver.js",
      "**/src/typings/**/*.d.ts",
      "**/src/vs/*/**/*.d.ts",
      "**/src/vs/base/test/common/filters.perf.data.js",
      "**/src/vs/loader.js",
      "**/test/unit/assert.js",
      "**/test/automation/out/**",
      "**/typings/**",
      "!.vscode",
    ],
    "plugins": [],
    "rules": {
      "curly": "warn",
      "eqeqeq": "warn",
      "no-async-promise-executor": "warn",
      "no-caller": "warn",
      "no-case-declarations": "warn",
      "no-debugger": "warn",
      "no-duplicate-case": "warn",
      "no-duplicate-imports": "warn",
      "no-eval": "warn",
      "no-new-wrappers": "warn",
      "no-redeclare": "off",
      "no-restricted-globals": [
        "warn",
        "name",
        "length",
        "event",
        "closed",
        "external",
        "status",
        "origin",
        "orientation",
        "context",
      ],
      "no-sparse-arrays": "warn",
      "no-throw-literal": "warn",
      "no-unsafe-finally": "warn",
      "no-unused-labels": "warn",
      "no-var": "warn",
    },
  },
  "warnings": [
    "ignore allow list is currently not supported: !.vscode",
    "unsupported rule, but in development: constructor-super",
    "unsupported rule: prefer-const",
    "unsupported rule: no-buffer-constructor",
    "unsupported rule: no-extra-semi",
    "unsupported rule: no-misleading-character-class",
    "unsupported rule: header/header",
    "unsupported rule: @stylistic/ts/semi",
    "unsupported rule: @stylistic/ts/member-delimiter-style",
    "unsupported rule: jsdoc/no-types",
    "unsupported rule: @typescript-eslint/naming-convention",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: jsdoc/no-multi-asterisks",
    "unsupported rule: jsdoc/require-jsdoc",
    "unsupported rule: jsdoc/check-param-names",
    "unsupported rule: no-restricted-syntax",
    "unsupported rule: @typescript-eslint/naming-convention",
    "unsupported rule: comma-dangle",
    "unsupported rule: @typescript-eslint/naming-convention",
    "unsupported rule: @typescript-eslint/prefer-optional-chain",
    "unsupported rule: @typescript-eslint/prefer-readonly",
  ],
}
`;
